--- a/Web/CPEN 321 Website/smartshopper.html
+++ b/Web/CPEN 321 Website/smartshopper.html
@@ -73,7 +73,15 @@
 
 
 
-
+		<!-- Dynamic Page Based On JSON File --> 
+		<div id="container">
+			 <ul>
+			 	 <button>
+				 </button>
+			 </ul>
+		</div>
+		<script src="script.js" type="text/javascript"></script>
+		<script src="jquery-3.1.1.min.js" type="text/javascript"></script> 
 		
 
 </body>
