--- a/Web/webserver/public/index.html
+++ b/Web/webserver/public/index.html
@@ -57,9 +57,9 @@
       				<div class="col-md-12">
 					<div id="custom-search-input">
                 				<div class="input-group col-md-12">
-                    					<input type="text" class="form-control input-lg" placeholder="Search" />
+                    					<input id="search-input" type="text" class="form-control input-lg" placeholder="Search" />
                     					<span class="input-group-btn">
-                        					<button class="btn btn-info btn-lg" type="button">
+                        					<button id="search-btn" class="btn btn-info btn-lg" type="button">
                             						<i class="glyphicon glyphicon-search"></i>
                         					</button>
                     					</span>
@@ -80,19 +80,9 @@
 				 </button>
 			 </ul>
 		</div>
-		<script src="script.js" type="text/javascript"></script>
 		<script src="jquery-3.1.1.min.js" type="text/javascript"></script> 
 		<script src="http://localhost:80/socket.io/socket.io.js"></script>
-			<script>
-			  var socket = io();
-			  socket.connect('http://localhost:80');
-			  
-			  socket.on('news', function (data) {
-			    console.log(data);
-			    socket.emit('my other event', 'KEK');
-			  });
-			  
-			</script>
+		<script src="browser.js" type="text/javascript"></script>
 
 </body>
 		
