Random frontend web stuff

--- a/Web/CPEN 321 Website/login.html
+++ b/Web/CPEN 321 Website/login.html
@@ -14,6 +14,7 @@
 
       <body>
 	  
+	    <div id="background"> </div>
 	  
 	  		<!-- NAVIGATION BAR -->
 		<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
