--- a/Web/webserver/public/item_searched.html
+++ b/Web/webserver/public/item_searched.html
@@ -72,38 +72,12 @@
 
 
 
-		<!-- Dynamic Page Based On JSON File --> 
-		<!--
-		<div id="container">
-			 <ul>
-			 	 <button>
-				 </button>
-			 </ul>
-		</div>
-		<script src="script.js" type="text/javascript"></script>
+	
 		<script src="jquery-3.1.1.min.js" type="text/javascript"></script> 
-		-->
+		<script src="http://localhost:80/socket.io/socket.io.js"></script>
+		<script src="browser.js" type="text/javascript"></script>
+		
 
 </body>
 		
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
