--- a/Web/webserver/public/index.html
+++ b/Web/webserver/public/index.html
@@ -59,27 +59,19 @@
                 				<div class="input-group col-md-12">
                     					<input id="search-input" type="text" class="form-control input-lg" placeholder="Search" />
                     					<span class="input-group-btn">
-                        					<button id="search-btn" class="btn btn-info btn-lg" type="button">
-                            						<i class="glyphicon glyphicon-search"></i>
-                        					</button>
+                        					<a href="register.html" class="btn btn-info btn-lg" button id="search-btn" type="button"> 
+													<i class="glyphicon glyphicon-search"></i>	
+                        					</a>
                     					</span>
                 				</div>
             				</div>
         			</div>
 			</div>
 		</div>
+		
+		
+		
 					
-
-
-
-
-		<!-- Dynamic Page Based On JSON File --> 
-		<div id="container">
-			 <ul>
-			 	 <button>
-				 </button>
-			 </ul>
-		</div>
 		<script src="jquery-3.1.1.min.js" type="text/javascript"></script> 
 		<script src="http://localhost:80/socket.io/socket.io.js"></script>
 		<script src="browser.js" type="text/javascript"></script>
