--- a/Web/webserver/public/item_searched.html
+++ b/Web/webserver/public/item_searched.html
@@ -9,14 +9,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>	
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link href="css/navbar.css" rel="stylesheet" type="text/css" />
-	<link href="css/searh_bar.css" rel="stylesheet" type="text/css" />
+	<link href="css/search_bar.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 		<!-- NAVIGATION BAR -->
 		<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
     			<div class="container-fluid">
-       				<div class="navbar-header"><a class="navbar-brand" href="smartshopper.html">SmartShop</a>
+       				<div class="navbar-header"><a class="navbar-brand" href="index.html">SmartShop</a>
           				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
@@ -73,9 +73,9 @@
 
 
 	
-		<script src="jquery-3.1.1.min.js" type="text/javascript"></script> 
+		<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script> 
 		<script src="http://localhost:80/socket.io/socket.io.js"></script>
-		<script src="browser.js" type="text/javascript"></script>
+		<script src="js/browser.js" type="text/javascript"></script>
 		
 
 </body>
