--- a/Web/webserver/public/register.html
+++ b/Web/webserver/public/register.html
@@ -17,7 +17,7 @@
 		<!-- NAVIGATION BAR -->
 		<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
     			<div class="container-fluid">
-       				<div class="navbar-header"><a class="navbar-brand" href="smartshopper.html">SmartShop</a>
+       				<div class="navbar-header"><a class="navbar-brand" href="index.html">SmartShop</a>
           				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
@@ -63,6 +63,11 @@
 					</form>
 				</div>
 		
+		
+		
+		<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script> 
+		<script src="http://localhost:8080/socket.io/socket.io.js"></script>
+		<script src="js/browser.js" type="text/javascript"></script>
 		
 		
 </body>
