--- a/Web/webserver/public/index.html
+++ b/Web/webserver/public/index.html
@@ -7,9 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>	
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"	></script>
-	<link href="css/navbar.css" rel="stylesheet" type="text/css" />
-	<link href="css/search_bar.css" rel="stylesheet" type="text/css" />
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<link href="css/navbar.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -59,7 +58,7 @@
                 				<div class="input-group col-md-12">
                     					<input id="search-input" type="text" class="form-control input-lg" placeholder="Search" />
                     					<span class="input-group-btn">
-                        					<button class="btn btn-info btn-lg" type="button">
+                        					<button id="search-btn" class="btn btn-info btn-lg" type="button">
                             						<i class="glyphicon glyphicon-search"></i>
                         					</button>
 										
