Updated item_searched.html to test with webserver

--- a/Web/webserver/public/item_searched.html
+++ b/Web/webserver/public/item_searched.html
@@ -8,7 +8,8 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>	
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<link href="css/navbar.css" rel="stylesheet" type="text/css" />
+	<link href="css/navbar.css" rel="stylesheet" type="text/css"/>
+	<link href="css/item_searched.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -70,6 +71,25 @@
 
 
 		
+	
+	        <ul class="products">
+    		    <li>
+                    <a href="#">
+                        <img src="red-apple.png">
+                        <h4>Red Apple</h4>
+					</a>
+                        <p>Price: $2.20</p>
+						<p>Store: Walmart</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="green-apple.png">
+                        <h4>Green Apple</h4>
+					</a>
+                        <p>Price: $3.00</p>
+						<p>Store: Save on Foods</p>   
+                </li><!-- more list items -->
+		    </ul>
 		
 		
 		
