--- a/Web/webserver/public/index.html
+++ b/Web/webserver/public/index.html
@@ -79,6 +79,8 @@
 					
 		<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script> 
 		<script src="http://localhost:8080/socket.io/socket.io.js"></script>
+		<!-- <script src="https://cdn.socket.io/socket.io-1.5.1.js"></script> -->
+		<!-- <script src="/socket.io/socket.io.js"></script> -->
 		<script src="js/browser.js" type="text/javascript"></script>
 
 </body>
