--- a/Web/webserver/public/item_searched.html
+++ b/Web/webserver/public/item_searched.html
@@ -56,9 +56,9 @@
       				<div class="col-md-12">
 					<div id="custom-search-input">
                 				<div class="input-group col-md-12">
-                    					<input type="text" class="form-control input-lg" placeholder="Search" />
+                    					<input id="search-input" type="text" class="form-control input-lg" placeholder="Search"/>
                     					<span class="input-group-btn">
-                        					<button class="btn btn-info btn-lg" type="button">
+                        					<button id="search-btn" class="btn btn-info btn-lg" type="button">
                             						<i class="glyphicon glyphicon-search"></i>
                         					</button>
                     					</span>
