--- a/Web/webserver/public/item_searched.html
+++ b/Web/webserver/public/item_searched.html
@@ -68,11 +68,11 @@
 			</div>
 		</div>
 					
-
-
-		
 	
-	        <ul class="products">
+		
+		
+			
+		<ul class="products">
     		    <li>
                     <a href="#">
                         <img src="red-apple.png">
@@ -89,11 +89,73 @@
                         <p>Price: $3.00</p>
 						<p>Store: Save on Foods</p>   
                 </li><!-- more list items -->
+				<li>
+                    <a href="#">
+                        <img src="red-apple.png">
+                        <h4>Red Apple</h4>
+					</a>
+                        <p>Price: $2.20</p>
+						<p>Store: Walmart</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="green-apple.png">
+                        <h4>Green Apple</h4>
+					</a>
+                        <p>Price: $3.00</p>
+						<p>Store: Save on Foods</p>   
+                </li><!-- more list items -->
+				<li>
+                    <a href="#">
+                        <img src="red-apple.png">
+                        <h4>Red Apple</h4>
+					</a>
+                        <p>Price: $2.20</p>
+						<p>Store: Walmart</p>
+                </li>
+				<li>
+                    <a href="#">
+                        <img src="red-apple.png">
+                        <h4>Red Apple</h4>
+					</a>
+                        <p>Price: $2.20</p>
+						<p>Store: Walmart</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="green-apple.png">
+                        <h4>Green Apple</h4>
+					</a>
+                        <p>Price: $3.00</p>
+						<p>Store: Save on Foods</p>   
+                </li><!-- more list items -->
+				<li>
+                    <a href="#">
+                        <img src="red-apple.png">
+                        <h4>Red Apple</h4>
+					</a>
+                        <p>Price: $2.20</p>
+						<p>Store: Walmart</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="green-apple.png">
+                        <h4>Green Apple</h4>
+					</a>
+                        <p>Price: $3.00</p>
+						<p>Store: Save on Foods</p>   
+                </li><!-- more list items -->
+				<li>
+                    <a href="#">
+                        <img src="red-apple.png">
+                        <h4>Red Apple</h4>
+					</a>
+                        <p>Price: $2.20</p>
+						<p>Store: Walmart</p>
+                </li>
 		    </ul>
 		
 		
-		
-
 	
 		<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script> 
 		<script src="http://localhost:80/socket.io/socket.io.js"></script>
