--- a/Web/webserver/public/index.html
+++ b/Web/webserver/public/index.html
@@ -30,8 +30,8 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<span class="caret"></span></a>
 							<ul class="dropdown-menu">	
-								<li > <a href="#">Login</a> </li>
-								<li > <a href="#">Register</a> </li>
+								<li > <a href="login.html">Login</a> </li>
+								<li > <a href="register.html">Register</a> </li>
 							</ul>
 						</li>
 						
