--- a/Web/webserver/public/cart.html
+++ b/Web/webserver/public/cart.html
@@ -69,9 +69,33 @@
 		</div>
 					
 	
-		
-		
-			
+		<form id="shopping-cart" action="cart.html" method="post">
+			  <table class="shopping-cart">
+			  		 <thead>
+					 		<tr>
+								<th scope="col">Item</th>
+								<th scope="col">Qty</th>
+								<th scope="col">Price</th>
+							</tr>
+					</thead>
+					<tbody></tbody>
+				</table>
+				<p id="sub-total">
+				    <strong>Sub Total</strong>: <span id="stotal"></span>
+				</p>
+				<ul id="shopping-cart-actions">
+					<li>
+						<input type="submit" name="update" id="update-cart" class="btn" value="Update Cart" />
+					</li>
+					<li>
+						<input type="submit" name="delete" id="empty-cart" class="btn" value="Empty Cart" />
+					</li>
+					<li>
+						<a href="index.html" class="btn">Continue Shopping</a>
+					</li>
+				</ul>
+		</form>
+					
 	
 		<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script> 
 		<script src="http://localhost:80/socket.io/socket.io.js"></script>
