--- a/Web/webserver/public/login.html
+++ b/Web/webserver/public/login.html
@@ -8,23 +8,17 @@
         	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>	
         	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     		<link href="css/navbar.css" rel="stylesheet" type="text/css" />
-			<link rel="stylesheet" href="css/login_page.css">
+			<link href="css/login_page.css" rel="stylesheet" type="text/css"/>
 			<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	  </head>
 
       <body>
-	  
+	    
 	  
 	  		<!-- NAVIGATION BAR -->
 		<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
     			<div class="container-fluid">
-       				<div class="navbar-header"><a class="navbar-brand" href="index.html">SmartShop</a>
-          				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-            			</button>
+       				<div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="CheckedOutLogo4.jpeg"></img></a>
         			</div>
         			<div class="collapse navbar-collapse navbar-menubuilder">
             				<ul class="nav navbar-nav navbar-right">
@@ -35,7 +29,6 @@
 							<ul class="dropdown-menu">	
 								<li> <a href="login.html">Login</a> </li>
 								<li> <a href="register.html">Register</a> </li>
-				                <li> <a href="logout.html">Logout</a> </li>
 							</ul>
 						</li>
 						
