saving experimental changes; webserver currently broken

--- a/Web/webserver/public/html/index.html
+++ b/Web/webserver/public/html/index.html
@@ -41,13 +41,10 @@
         <div class="col-md-12">
           <div id="custom-search-input">
             <div class="input-group col-md-12">
-              <input id="search-input" type="text" placeholder="Search" class="form-control input-lg"><span class="input-group-btn">
-                <button id="search-btn" type="button" class="btn btn-info btn-lg"><i class="glyphicon glyphicon-search"></i></button>
-                <!--
-                <a href="register.html" class="btn btn-info btn-lg" button id="search-btn" type="button">
-                <i class="glyphicon glyphicon-search"></i>
-                </a>
-                --></span>
+              <input id="search-input" type="text" placeholder="Search" class="form-control input-lg">
+                <span class="input-group-btn">
+                  <button id="search-btn" type="button" class="btn btn-info btn-lg"><i class="glyphicon glyphicon-search"></i></button>
+                </span>
             </div>
           </div>
         </div>
