Some Changes To Login and Register

--- a/Web/webserver/public/register.html
+++ b/Web/webserver/public/register.html
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>	
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link href="css/navbar.css" rel="stylesheet" type="text/css"/>
-	<link rel="stylesheet" href="css/register_page.css">
+	<link href="css/register_page.css" rel="stylesheet"/>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 
@@ -17,13 +17,7 @@
 		<!-- NAVIGATION BAR -->
 		<div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
     			<div class="container-fluid">
-       				<div class="navbar-header"><a class="navbar-brand" href="index.html">SmartShop</a>
-          				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-            			</button>
+       				<div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="CheckedOutLogo4.jpeg"></img></a>
         			</div>
         			<div class="collapse navbar-collapse navbar-menubuilder">
             				<ul class="nav navbar-nav navbar-right">
@@ -55,7 +49,7 @@
 		<!-- Registration Page -->
 		        <div class="Register">
 			        <form method="post" > <!-- action="#" URL OF WHERE TO SEND THE DATA --> 
-						  <h5> Welcome to SmartShop! </h5>
+						  <h5> Welcome to CheckedOut! </h5>
                     	  	   <input type="text" required placeholder="Name" autocomplete="off"> 
                     		   <input type="text" id="email" required placeholder="Email" autocomplete="off">
                     		   <input type="password" name="password" id="password" required placeholder="Password" autocomplete="off"> 
