--- a/Web/webserver/public/register.html
+++ b/Web/webserver/public/register.html
@@ -48,15 +48,21 @@
 		
 		<!-- Registration Page -->
 		        <div class="Register">
-			        <form method="post" > <!-- action="#" URL OF WHERE TO SEND THE DATA --> 
+			        <form onsubmit="return checkForm(this);"> <!-- action="#" URL OF WHERE TO SEND THE DATA --> 
 						  <h5> Welcome to CheckedOut! </h5>
-                    	  	   <input type="text" required placeholder="Name" autocomplete="off"> 
-                    		   <input type="text" id="email" required placeholder="Email" autocomplete="off">
-                    		   <input type="password" name="password" id="password" required placeholder="Password" autocomplete="off"> 
+                    	  	   <input type="text" name="name" required placeholder="Name" autocomplete="off"> 
+                    		   <input type="text" name="email" required placeholder="Enter Email" autocomplete="off">
+							   <input type="text" name="email_verify" required placeholder="Confirm Email" autocomplete="off">
+                    		   <input type="password" name="pwd1" required placeholder="Password" autocomplete="off">
+							   <input type="password" name="pwd2" required placeholder="Confirm Password" autocomplete="off"> 
             				   <input type="submit" value="Register" title="Register">
 					</form>
 				</div>
 		
+		
+		
+
+
 		
 		
 		<script src="js/jquery-3.1.1.min.js" type="text/javascript"></script> 
